Fix the alignment of icon and its text

--- a/source/wp-content/themes/wporg-developer/stylesheets/main.css
+++ b/source/wp-content/themes/wporg-developer/stylesheets/main.css
@@ -917,6 +917,9 @@ input {
   display: block;
   margin: 0 auto;
   opacity: 0.4;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .devhub-wrap .section .widget-title .dashicons.dashicons-rest-api {
